all buttons working

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>Rock Player Scissors</h1>
+    <section>Player 1</section>
+      <button class="rock">ROCK</button>
+      <button class="paper">PAPER</button>
+      <button class="scissors">SCISSORS</button>
+
+    <ul class="results"></ul>
+      
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
